# sa-revamp

./: .gitignore  README.md  app.py  entry.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
api/: api_bp.py
api/templates/api/: game_filter.html
config/: config.py  utils.py
main_app/: app.py
main_app/game/: game_bp.py
main_app/game_reviews/: review_bp.py
main_app/templates/: home.html  index.html
main_app/templates/game_reviews/: reviews.html
my_reviews/: review_bp.py
my_reviews/templates/my_reviews/: index.html
my_reviews/templates/my_reviews/macros/: macros.html
static/src/css/: input.css
